2009-10-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("prefetch"): Remove stcmh for prefetching.

2009-10-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/tpf.h (TARGET_DEFAULT): Remove MASK_HARD_FLOAT and
	add MASK_HARD_DFP.

2009-10-05  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Backport from mainline.
        * config/arm/arm.c (arm_override_options): Really initialize
        flag_dwarf2_cfi_asm to 0.

2009-10-02  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Backport from mainline.	
	2009-10-01  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	* config/arm/arm.c (arm_override_options): Turn off
	flag_dwarf2_cfi_asm for AAPCS variants.

2009-09-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/22093
	* config/alpha/alpha.md (unaligned_storehi_be): Force operand
	of plus RTX into register.

2009-09-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/fixdfdi.h: Add Runtime Library Exception wording to
	the License text.

2009-09-25  Jakub Jelinek  <jakub@redhat.com>

	* tree-vect-transform.c (vectorizable_call): Call
	mark_symbols_for_renaming after vect_finish_stmt_generation.

2009-09-25  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.md (load_toc_v4_PIC_3c): Correct POWER
	form of instruction.

2009-09-24  Kai Tietz  <kai.tietz@onevision.com>

	* libgcc2.c (L_trampoline): Prototype for getpagesize
	and mprotect in WINNT case.

2009-09-24  Alan Modra  <amodra@bigpond.net.au>

	PR target/40473
	* config/rs6000/rs6000.c (rs6000_output_function_prologue): Don't
	call final to emit non-scheduled prologue, instead insert at entry.

2009-09-23  Dodji Seketeli  <dodji@redhat.com>

	PR debug/41065
	* function.h (types_used_by_vars_hash): Declare new hash table.
	(types_used_by_vars_eq, types_used_by_var_decl_insert): Declare
	equality and hash function for the hash table.
	(types_used_by_cur_var_decl): Declare a new global chained list.