@@ -3019,7 +3019,10 @@ expand_call (tree exp, rtx target, int ignore)
 	}
       else if (TYPE_MODE (TREE_TYPE (exp)) == BLKmode)
 	{
-	  target = copy_blkmode_from_reg (target, valreg, TREE_TYPE (exp));
+	  rtx val = valreg;
+	  if (GET_MODE (val) != BLKmode)
+	    val = avoid_likely_spilled_reg (val);
+	  target = copy_blkmode_from_reg (target, val, TREE_TYPE (exp));
 
 	  /* We can not support sibling calls for this case.  */
 	  sibcall_failure = 1;
