@@ -1,3 +1,10 @@
+2009-10-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/41646
+	* calls.c (expand_call): For BLKmode types returned in registers
+	avoid likely spilled hard regs in copy_blkmode_from_reg generated
+	insns.
+
 2009-10-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* config/s390/s390.md ("prefetch"): Remove stcmh for prefetching.
